feat: Make website Netlify deployment ready
- Add netlify.toml configuration with build settings and security headers
- Add _redirects file for proper routing and 404 handling
- Create custom 404.html error page
- Add SEO meta tags (Open Graph, Twitter cards) to all pages
- Create robots.txt and sitemap.xml for better SEO
- Add .gitignore for clean version control
- Fix broken catalog PDF links to redirect to contact page
- Create catalog directory with README explaining availability
- Optimize caching headers for static assets
- Add security headers (X-Frame-Options, XSS-Protection, etc.)

Ready for deployment on Netlify with optimal performance and SEO.

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact – YAW'S YAMS AND CROPS EXPO.</title>
+  <meta name="description" content="Contact YAW'S YAMS AND CROPS EXPO. for premium Ghanaian agricultural exports. Email, phone, and WhatsApp available.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yawsyams.netlify.app/contact.html">
+  <meta property="og:title" content="Contact – YAW'S YAMS AND CROPS EXPO.">
+  <meta property="og:description" content="Get in touch for premium Ghanaian agricultural exports. We supply worldwide and locally in Ghana.">
+
+  <!-- Additional SEO -->
+  <meta name="keywords" content="contact, Ghana agricultural exports, yams supplier, crop exporter, Emmanuel Agyei">
+  <link rel="canonical" href="https://yawsyams.netlify.app/contact.html">
+  
   <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
