--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>YAW'S YAMS AND CROPS EXPO. – Fresh Premium Ghanaian Yams & Crops</title>
   <meta name="description" content="YAW'S YAMS AND CROPS EXPO. exports fresh premium Ghanaian yams and crops (maize, groundnut, beans, agushi) worldwide.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yawsyams.netlify.app/">
+  <meta property="og:title" content="YAW'S YAMS AND CROPS EXPO. – Fresh Premium Ghanaian Yams & Crops">
+  <meta property="og:description" content="Exporting fresh premium Ghanaian yams and crops worldwide. Quality, traceability, and reliability guaranteed.">
+  <meta property="og:image" content="https://yawsyams.netlify.app/images/hero/01.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://yawsyams.netlify.app/">
+  <meta property="twitter:title" content="YAW'S YAMS AND CROPS EXPO. – Fresh Premium Ghanaian Yams & Crops">
+  <meta property="twitter:description" content="Exporting fresh premium Ghanaian yams and crops worldwide. Quality, traceability, and reliability guaranteed.">
+  <meta property="twitter:image" content="https://yawsyams.netlify.app/images/hero/01.jpg">
+
+  <!-- Additional SEO -->
+  <meta name="keywords" content="Ghana yams, premium crops, export, maize, groundnut, beans, agushi, agricultural exports">
+  <meta name="author" content="YAW'S YAMS AND CROPS EXPO.">
+  <link rel="canonical" href="https://yawsyams.netlify.app/">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -34,7 +54,7 @@
         <p class="hero-main"><span>Exporting FRESH PREMIUM &amp; QUALITY Ghanaian YAMS and CROPS worldwide</span><br><span class="hero-highlight">We also distribute to restaurants, schools, hotels, institutions, and more locally in Ghana</span></p>
         <div class="hero-cta">
           <a class="btn primary" href="products.html">View Our Products</a>
-          <a class="btn" href="catalog/YamEx-Catalog.pdf" target="_blank" rel="noopener">Download Catalog</a>
+          <a class="btn" href="contact.html">Contact for Catalog</a>
         </div>
       </div>
     </section>
