--- a/products.html
+++ b/products.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Products – YAW'S YAMS AND CROPS EXPO.</title>
+  <meta name="description" content="Premium export-grade Ghanaian produce: yams, maize, groundnuts, beans, and agushi. Quality controlled from trusted farmer networks.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yawsyams.netlify.app/products.html">
+  <meta property="og:title" content="Products – YAW'S YAMS AND CROPS EXPO.">
+  <meta property="og:description" content="Premium export-grade Ghanaian produce: yams, maize, groundnuts, beans, and agushi.">
+  <meta property="og:image" content="https://yawsyams.netlify.app/images/yams/01.jpg">
+
+  <!-- Additional SEO -->
+  <meta name="keywords" content="Ghana yams, premium crops, export, maize, groundnut, beans, agushi, agricultural products">
+  <link rel="canonical" href="https://yawsyams.netlify.app/products.html">
+  
   <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
@@ -86,7 +99,7 @@
     </section>
 
     <section style="margin-top:28px">
-      <a class="btn primary" href="catalog/YamEx-Catalog.pdf" target="_blank">Download Product Catalog</a>
+      <a class="btn primary" href="contact.html">Contact for Product Catalog</a>
     </section>
   </main>
 
